--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "ejs": "^3.1.3",
-    "ejs-lint": "1.1.0",
     "express": "^4.17.1",
-    "mammoth": "1.4.9",
+    "mammoth": "^1.4.9",
     "nodemon": "2.0.4"
   },
   "scripts": {
