--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mammoth": "^1.4.9",
-    "nodemon": "2.0.4"
+    "nodemon": "^2.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
