--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "work_app",
-  "version": "0.1.x",
+  "version": "0.1",
   "description": "A Work app",
   "main": "app.js",
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mammoth": "^1.4.9",
-    "nodemon": "^2.0.4"
+    "marked": "^1.1.0",
+    "nodemon": "^2.0.4",
+    "print-js": "^1.0.63"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
