--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "print-js": "^1.0.63"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
