--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mammoth": "^1.4.9",
     "marked": "^1.1.0",
     "nodemon": "^2.0.4",
-    "print-js": "^1.0.63"
+    "print-js": "^1.0.63",
+    "print.js": "^1.0.18"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
