--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "express": "^4.17.1",
     "mammoth": "^1.4.9",
     "marked": "^1.1.0",
-    "nodemon": "^2.0.4",
-    "print-js": "^1.0.63",
-    "print.js": "^1.0.18"
+    "nodemon": "^2.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
