--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.1",
     "mammoth": "^1.4.9",
     "marked": "^1.1.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "print-js": "^1.0.63"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
